Add ThreadControllerImpl::RunTask trace event in lighthouse category

Many tracing consumers collect the toplevel category only for this
event, however the toplevel category is very chatty (~25-50% of a
trace's bytes). This will allow downstream tools to collect much
smaller traces.

Bug: 874982
Change-Id: Ib41ded90f120ba9a703a10f83320d0d10233ed13
Reviewed-on: https://chromium-review.googlesource.com/791314
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Alexander Timin <altimin@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588753}
Former-commit-id: a87184b24c822c7c8c625408013409e9b4b9d3eb